# AI_Tamagotchi

./: CMakeLists.txt  imgui.ini
include/: AnimalSpriteSheet.h  App.h  Curves.h  DevMenu.h  EmojiSpriteSheet.h  Pet.h  PetActions.h  PetStats.h  app.h  devMenu.h
include/UtilitySystem/: Action.hpp  ActionBase.hpp  ActionEat.hpp  Blackboard.hpp  UtilityBase.hpp  UtilityCleaning.hpp  UtilityFeeding.hpp  UtilityIdle.hpp  UtilityInfo.hpp  UtilityPlaying.hpp  UtilitySystem.hpp
include/UtilitySystem/Actions/: ActionClean.hpp  ActionEat.hpp  ActionIdle.hpp  ActionPlay.hpp  ActionSleep.hpp
include/UtilitySystem/Utilities/: UtilityCleaning.hpp  UtilityFeeding.hpp  UtilityPlaying.hpp  UtilitySleeping.hpp
src/: App.cpp  Curves.cpp  DevMenu.cpp  Pet.cpp  PetStats.cpp  app.cpp  curves.cpp  devMenu.cpp  main.cpp
src/UtilitySystem/: Action.cpp  ActionBase.cpp  ActionEat.cpp  Blackboard.cpp  UtilityBase.cpp  UtilityCleaning.cpp  UtilityFeeding.cpp  UtilityIdle.cpp  UtilityPlaying.cpp  UtilitySystem.cpp
src/UtilitySystem/Actions/: ActionClean.cpp  ActionEat.cpp  ActionIdle.cpp  ActionPlay.cpp  ActionSleep.cpp
src/UtilitySystem/Utilities/: UtilityCleaning.cpp  UtilityFeeding.cpp  UtilityPlaying.cpp  UtilitySleeping.cpp
